Updating the portifolio

--- a/index.html
+++ b/index.html
@@ -643,47 +643,46 @@
                                         <div class="col-sm-10">
                                             <h4>SRP 2.0 Platform</h4>
                                             <p>
-                                                Build a PoC version of SRP 2.0 platform. It is a re-engineering the
+                                                Build a POC version of SRP 2.0 platform. It is a re-engineering the
                                                 SRP 1.0 with advanced features. It allows creating a community
                                                 seamlessly. Build an authorization gateway for the entire platform.
                                             </p>
                                         </div>
                                     </div>
+                                    <h3><a href="https://www.progredigroup.com/">Progredi Group</a></h3>
+                                    <div class="row">
+                                        <div class="col-sm-2">
+                                            <img src="./images/contains/progredi_logo.png" alt="" class="img-fluid">
+                                        </div>
+                                        <div class="col-sm-10">
+                                            <h4>Progredi Cluster date analysis</h4>
+                                            <p>
+                                                Build a POC version of Cluster data analysis platform. It will process
+                                                the raw data and generates report in graphical data points.
+                                                Data points suggest multiple dimentions of product placement in the store.
+                                            </p>
+                                        </div>
+                                    </div>
                                 </div>
+                                
                             </div>
                             <div class="row margin-b-30">
                                 <div class="col-sm-3 event-info">
                                     <span>Internet of things (IoT)</span>
-                                    <span>R &amp; D</span>
-                                    <span class="event-hall">September 2015 – December 2015</span>
+                                    <!-- <span class="event-hall">September 2015 – December 2015</span> -->
                                 </div>
                                 <div class="col-sm-9 event-detail">
-                                    <h3><a href="http://www.cloudicalabs.com/" target="_blank">Cloudica Labs</a></h3>
+                                    <h3><a href="https://www.clorder.com/" target="_blank">Clorder</a></h3>
                                     <div class="row margin-b-20">
                                         <div class="col-sm-2">
-                                            <img src="./images/contains/cloudica-labs.png" alt="" class="img-fluid">
+                                            <img src="./images/contains/clorder_logo.png" style="background-color: #555;" alt="" class="img-fluid">
                                         </div>
                                         <div class="col-sm-10">
-                                            <h4>Recruitment Platform</h4>
-                                            <h6>Solution Architect , September 2015 – December 2015</h6>
+                                            <h4>Wabagrill</h4>
                                             <p>
-                                                Designed &amp; Developed complete Recruitment platform. developed all
-                                                the service level API's with the support of 1Mmessage/sec
-                                                throughput
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-sm-2">
-                                            <img src="./images/contains/cloudica-labs.png" alt="" class="img-fluid">
-                                        </div>
-                                        <div class="col-sm-10">
-                                            <h4>Chat Service</h4>
-                                            <h6>Solution Architect , October 2015 – December 2015</h6>
-                                            <p>
-                                                Build a chat service which is enabled for conferencing, group chat
-                                                , Managing Channels for Recruitment platform to have an interaction
-                                                between HR &amp; candidate.
+                                                Designed &amp; Developed infra for DEV and QA and automated the build deployment process.
+                                                Added the required extra features to locate new locations and file event storage management.
+                                                
                                             </p>
                                         </div>
                                     </div>
