--- a/index.html
+++ b/index.html
@@ -684,6 +684,23 @@
   <script type="text/javascript" async="" src="js/analytics.js">
   </script>
 
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157466444-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157466444-1');
+  </script>
+
+  <script type="text/javascript">
+    var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || 
+    {widgetcode:"d4cab458755e78c45beeb1ca8ca1d961c1e0d8e4df02dc013df4e3ac8b0c7460", values:{},ready:function(){}};
+    var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
+    s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
+  </script>
 </body>
 
 </html>
